Changelog for UCDPloneSkin

UCDPloneSkin 2.0 - Released - May 7 2007
   - reverted to tables in portal header due to vert spacing issues
   - new favicon with transparency
   - fixed hideDeptName option
   - fixed live_search bug due to copying and pasting original code
   - updated print css for new nav

UCDPloneSkin 2.0rc7 - Pending - May 3 2007
  [ Charles McLaughlin, cmclaughlin@ucdavis.edu ]
    - changed string comparision in nav class so that it works checks against 
      the url work with the virtual host monster

UCDPloneSkin 2.0rc6 - Pending - May 2 2007
  [ Charles McLaughlin, cmclaughlin@ucdavis.edu ]
    - advanced and show all links in livesearch_reply.py link to portal root
      to avoid portal_tab dimming
    - renamed/reregistered css so users can use ploneCustom
  [ Scott Beardsley, scott@cse.ucdavis.edu ]
    - fix for bottom-border through middle of images

UCDPloneSkin 2.0rc5 - Pending - May 1 2007
  [ Charles McLaughlin, cmclaughlin@ucdavis.edu ]
    - fixed bgImageNoRepeat submit bug
    - derived navigation class so "in this section" behaves with only one item
      that is marked as excludeFromNav
    - added portal-logo bottom padding
  [ Scott Beardsley, scott@cse.ucdavis.edu ]
    - fixed 1px live search bug
    - converted heading from a table to divs
    - fixed hideDeptName install typo in ucdploneskin_properties
    - moved content area closer to the nav (too much whitespace)

UCDPloneSkin 2.0rc4 - Pending - Apr 23 2007
  [ Charles McLaughlin, cmclaughlin@ucdavis.edu ]
    - fixed header bg image regression
    - added configlet option to hide department name in the header
    - hard coded an alt tag for the optional logo in the header
    - centered optional header logo with a table hack
    - tweaked portlet css

UCDPloneSkin 2.0rc3 - Pending - Apr 20 2007
  [ Charles McLaughlin, cmclaughlin@ucdavis.edu ]
    - reworded favicon help
    - fixed left nav bug... current item now honors excludeFromNav property